@@ -1,3 +1,8 @@
+2009-09-17   Patrice Dumas  <dumas@centre-cired.fr>
+
+	* texi2html.pl: use global information for @printindex not
+	associated with any element.
+
 2009-09-16   Patrice Dumas  <dumas@centre-cired.fr>
 
 	* texi2html.pl, texi2html.init: hold the index entries gathered 
